[tool.poetry]
name = "testdoublesexample"
version = "0.1.0"
description = ""
authors = ["Evan Young <cantis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# -ra is for showing the output of the tests that failed
# -q is for quiet mode
addopts = "-ra -q"
# this adds the application to the path for the tests
pythonpath = [".", "reports"]
# this sets the testpaths to the tests directory
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN001", "ANN101", "S101"] # Don't require type annotations on self. See https://docs.astral.sh/ruff/rules/missing-type-self/

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"] # ignore asserts in test folders
